Replace initial stylesheet

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
   </style>
 
-  <link href="./shrink.css" rel="stylesheet">
+  <link href="./sticky.css" rel="stylesheet">
 </head>
 
 <body class="page">
