Prepare holy grail example

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       --mochilo: #ffea00;
       --gazpacho: #ff9100;
       --pincho: #00e676;
-      --selected: #2979FF;
+      --freson: #f50057;
+      --monus: #8d6e63;
+      --selected: #2979ff;
 
       --font-family: sans-serif;
 
@@ -45,15 +47,27 @@
     .pincho {
       background-color: var(--pincho);
     }
+
+    .freson {
+      background-color: var(--freson);
+    }
+
+    .monus {
+      background-color: var(--monus);
+    }
   </style>
 
-  <link href="./shrink.css" rel="stylesheet">
+  <link href="./holy-grail.css" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="fruitti gazpacho"><span>gazpacho</span></div>
-  <div class="fruitti mochilo"><span>mochilo</span></div>
-  <div class="fruitti pincho"><span>pincho</span></div>
+  <div class="page__main">
+    <div class="fruitti mochilo"><span>mochilo</span></div>
+    <div class="fruitti pincho"><span>pincho</span></div>
+    <div class="fruitti freson"><span>fresón</span></div>
+  </div>
+  <div class="fruitti monus"><span>monus</span></div>
 </body>
 
 </html>
