Prepare working directory

--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
     }
   </style>
 
-  <link href="./sticky.css" rel="stylesheet">
+  <link href="./sticky-footer.css" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="fruitti gazpacho"><span>gazpacho</span></div>
-  <div class="page__main">
-    <div class="fruitti mochilo"><span>mochilo</span></div>
-    <div class="fruitti pincho"><span>pincho</span></div>
-    <div class="fruitti freson"><span>fresón</span></div>
-  </div>
+  <div class="fruitti mochilo"><span>mochilo</span></div>
+  <div class="fruitti pincho"><span>pincho</span></div>
+
+  <!--
+  <div class="fruitti freson"><span>fresón</span></div>
   <div class="fruitti monus"><span>monus</span></div>
+  -->
 </body>
 
 </html>
